updated readDatFile() method, it's shorter