@@ -1,7 +1,6 @@
 package Problem_Clothes;
 import java.io.*;
 import java.util.*;
-import java.util.stream.*;    // Required for Stream and Collectors
 import java.nio.file.*;  
 
 public class Clothes {
@@ -41,12 +40,11 @@ public class Clothes {
     }
 
     public static List<String> readDatFile(String filename) {
-        // Use try-with-resources to ensure the file stream is closed
-        try (Stream<String> stream = Files.lines(Paths.get(filename))) {
-            return stream.collect(Collectors.toList());
+        try {
+            return Files.readAllLines(Path.of(filename));
         } catch (IOException e) {
             System.err.println("readDatFile error: " + e.getMessage());
-            return List.of(); // Return empty list instead of null for safety
+            return List.of();
         }
     }
 }
